--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.1",
   "description": "A lightweight image format (text/typogram) useful for drawing simple ASCII diagrams in technical documentation",
   "bin": "main.js",
+  "scripts": {
+    "build": "browserify src/typograms.js -o docs/typograms.js",
+    "serve": "http-server docs",
+    "run": "npx . foobar"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/google/typograms.git"
@@ -22,6 +27,7 @@
   "homepage": "https://github.com/google/typograms#readme",
   "dependencies": {
     "browserify": "^17.0.0",
+    "http-server": "^14.1.1",
     "yargs": "^17.7.2"
   }
 }
